Removed search from command bar, fixed focus methods in overflowSet and resize group

--- a/packages/office-ui-fabric-react/src/components/CommandBar/CommandBar.scss
+++ b/packages/office-ui-fabric-react/src/components/CommandBar/CommandBar.scss
@@ -3,7 +3,6 @@
 .root {
   @include ms-font-m;
   color: $ms-color-neutralPrimary;
-  height: 40px;
   position: relative;
   display: flex;
   background-color: $ms-color-neutralLighter;
